# MatMaster

./: .env.example  .gitignore  .pre-commit-config.yaml  MatMaster运行逻辑说明.md  README.md  export_test_env.sh  parameters_json_format.md  pyproject.toml
.github/: dependabot.yml  pr-auto-label.yml  release-drafter.yml
.github/workflows/: check-pr-title.yml  check-sharing-url.yml  mcp-healthcheck.yml  pr-auto-label.yml  pre-commit.yml  update-pre-commit.yml
agents/: nohup.out
agents/langgraph/progressive_agent_demo/: agent.ipynb  agent.py  main.py  tools.py
agents/matmaster_agent/: agent.py  callback.py  config.py  constant.py  llm_config.py  locales.py  logger.py  main.py  model.py  prompt.py  recommend_question.json  setting.py  state.py  style.py  utils.py
agents/matmaster_agent/services/: icl.py  (+6 more)
evaluate/: base.py  constant.py  evaluate_transfer_to_agent_quality.py  main.py  multi_options_quality.py  transfer_to_agent_quality.py  utils.py
evaluate/base/: evaluation.py  human_simulator.py
evaluate/experiments/: answer_exp.py  answer_qa_exp.json  answer_qa_exp.py  multi_options_exp.py  multi_turn_answer_exp.py  transfer_or_answer_exp.py  transfer_to_agent_exp.py
evaluate/metric/: multi_options_quality.py  transfer_or_answer_quality.py  transfer_to_agent_quality.py
evaluate_threads/: CHANGES.md  README.md  evaluate.py  human_simulator.py  quick_test.py  test_adk_integration.py  test_human_simulator.py
example_queries/: steel_composition_strength_analysis.md
experiments/calback_store_db/: agent.py  main.py
experiments/resume_demo/: agent.py
experiments/resume_matmaster/: agent.py  main.py
scripts/: constant.py  finance.py  get_acs_result.py  log_analysis.py  mcp_get_schema.py  mcp_get_tools.py  mcp_healthcheck.py  mcp_timer.py  phonon.py  sandbox_api.py  sandbox_cli.py
(+493 files in other folders)
