[project]
name = "matmaster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opik>=1.8.49",
    "bohr-agent-sdk==0.1.101",
    "oss2>=2.18.0",
    "aiofiles>=24.1.0",
    "pymysql>=1.1.1",
    "anyio>=4.10.0",
    "pytest-asyncio>=1.1.0",
    "litellm>=1.76.1",
    "google-adk[a2a]==1.14.1",
    "pre-commit>=4.3.0",
    "bohrium-sdk>=0.14.0",
    "toolsy>=0.1.2",
]

[tool.setuptools]
packages = ["agents"]  # 明确指定只包含 agents 包

[tool.hatch.build.targets.wheel]
packages = ["agents"]
